# ANA-NOVO-PROJETO

./: .gitignore  PEPELINE-DEF.MD  PIPELINE-V2.MD  PIPELINE-V3.MD  PIPELINE.md  README.md  REGRAS-IMUTAVEIS.md  ana_debug_20260320_134859.md  ana_debug_20260320_140727.md  ana_debug_20260320_140810.md  ana_debug_20260320_141038.md  ana_debug_20260320_141553.md  ana_debug_20260320_141841.md  ana_debug_20260323_094035.md  ana_debug_20260323_101047.md  ana_debug_20260323_103550.md  ana_debug_20260323_152650.md  ana_debug_20260323_233411.md  ana_debug_20260323_235122.md  ana_debug_20260324_095914.md  ana_debug_20260324_103911.md  ana_debug_20260324_111818.md  ana_debug_20260324_120907.md  ana_debug_20260324_124758.md  ana_debug_20260324_131234.md  ana_debug_20260324_134335.md  ana_debug_20260324_135942.md  ana_debug_20260324_145505.md  ana_debug_20260324_155001.md  ana_debug_20260324_161200.md  ana_debug_20260324_163621.md  ana_debug_20260324_172158.md  ana_debug_20260324_225450.md  ana_debug_20260324_232351.md  ana_debug_20260326_232703.md  ana_debug_20260326_232703_contexto_uso.md  ana_debug_20260326_232703_storytelling.md  ana_debug_20260330_010340.md  ana_debug_20260330_010340_cerebro_conversa.md  ana_debug_20260330_013913.md  (+15 more)
ana_v2/: __init__.py  base_de_consulta.py  catalogo_auxiliares.py  catalogo_etapas.py  cli.py  construtor_debug_conversa.py  decisor_etapas.py  fabrica_cliente_llm.py  loaders.py  modelos_conversa.py  restaurador_sessao_debug.py  service.py
scripts/: customer_probe_resistant_buy.json  generate_petshop_response_strategy_audit.py  run_ana_v2_probe.py  (+4 more)
(+148 files in other folders)
